fixing user stats on tablets

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -107,6 +107,10 @@
       }
       &:last-child {
         margin: 0 auto;
+        width: 100%;
+        @media screen and (min-width: $md) {
+          width: 33%;
+        }
       }
     }
   }
